tests/fail/registering/term typed with a pure sort.mmu
(sort spure )
(term a () (s ()))
